fixing spacing issue with too many ingredients in cart

--- a/src/styles/MissingIngredients.module.scss
+++ b/src/styles/MissingIngredients.module.scss
@@ -61,6 +61,7 @@
   }
   .cart {
     padding: 0 25px;
+    margin-bottom: 80px;
 
     h2 {
       display: flex;
